--- a/app/views/vouchersettings.html
+++ b/app/views/vouchersettings.html
@@ -77,7 +77,7 @@
 
                                 <select name="typeselection" ng-class="{'haserror':field[0]===fields.type}" class="form-control req-field-color" placeholder="Select Type" id="typeselection" ng-model="voucherSubmit.typeData" ng-change="typeDataSelect(voucherSubmit.typeData)">
                                     <option value="" disabled selected>Select Type</option>
-                                    <option ng-repeat="x in selectedTypes" value="{{$index}}">{{x.description+' ('+x.vou_type+')'}}</option>
+                                    <option ng-repeat="x in selectedTypes" value="{{x.id}}">{{x.description+' ('+x.vou_type+')'}}</option>
                                 </select>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                             <label class="col-md-offset-4 col-md-8 no-padding-hr">
                                 <input id="allowUserCheck" type="checkbox" ng-model="voucherSubmit.allowId" class="checkboxspace">{{vouchermodifcationsdata[0].name}}</label>
                             <label class="col-md-offset-4 col-md-8 no-padding-hr" style="display:flex;">
-                                <input id="reNumberCheck" type="checkbox" ng-model="voucherSubmit.reNumber" ng-disabled="voucherSubmit.allowId ? false : true" class="checkboxspace">{{vouchermodifcationsdata[1].name}}</label>
+                                <input id="reNumberCheck" type="checkbox" ng-model="voucherSubmit.reNumber" ng-checked="voucherSubmit.allowId?false:''" ng-disabled="voucherSubmit.allowId ? false : true" class="checkboxspace">{{vouchermodifcationsdata[1].name}}</label>
                             <label class="col-md-offset-4 col-md-8 no-padding-hr">
                                 <input id="allowUserPrint" type="checkbox" ng-model="voucherSubmit.printVoucher" class="checkboxspace">{{vouchermodifcationsdata[2].name}}</label>
                         </div>
@@ -256,7 +256,7 @@
 
                                 <select name="typeselection"  ng-class="{'haserror':field[0]===fields.type}" class="form-control req-field-color" placeholder="Select Type" id="typeselection" ng-model="voucherSubmit.typeData" ng-change="typeDataSelect(voucherSubmit.typeData)">
                                     <option value="" disabled selected>Select Type</option>
-                                    <option ng-repeat="x in selectedTypes" ng-selected="{{typeselectionwhileedit(x)}}" value="{{x.description}} ({{x.vou_type}})">{{x.description+' ('+x.vou_type+')'}}</option>
+                                    <option ng-repeat="x in selectedTypes" value="{{x.id}}">{{x.description+' ('+x.vou_type+')'}}</option>
                                 </select>
                             </div>
                         </div>
@@ -387,7 +387,7 @@
                             <label class="col-md-offset-4 col-md-8 no-padding-hr">
                                 <input id="allowUserCheck" type="checkbox" ng-model="voucherSubmit.allowId" class="checkboxspace">{{vouchermodifcationsdata[0].name}}</label>
                             <label class="col-md-offset-4 col-md-8 no-padding-hr" style="display:flex;">
-                                <input id="reNumberCheck" type="checkbox" ng-model="voucherSubmit.reNumber" ng-disabled="voucherSubmit.allowId ? false : true" class="checkboxspace">{{vouchermodifcationsdata[1].name}}</label>
+                                <input id="reNumberCheck" type="checkbox" ng-model="voucherSubmit.reNumber" ng-checked="voucherSubmit.allowId?false:''" ng-disabled="voucherSubmit.allowId ? false : true" class="checkboxspace">{{vouchermodifcationsdata[1].name}}</label>
                             <label class="col-md-offset-4 col-md-8 no-padding-hr">
                                 <input id="allowUserPrint" type="checkbox" ng-model="voucherSubmit.printVoucher" class="checkboxspace">{{vouchermodifcationsdata[2].name}}</label>
                         </div>
