--- a/app/views/location.html
+++ b/app/views/location.html
@@ -9,7 +9,7 @@
                     <h2 class="modal-title">Add Location</h2>
                     <div class="row no-margin-hr">
                         <div class="col-md-12 no-padding-hr">
-                            <label class="pull-right"><input type="checkbox"  ng-model="props.status" ng-init="props.status=true"><span> Active</span></label>
+                            <label class="pull-right"><input type="checkbox"  ng-model="props.is_Active" ng-init="props.is_Active=true"><span> Active</span></label>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                 <h2 class="modal-title">Edit Location</h2>
                 <div class="row no-margin-hr">
                     <div class="col-md-12 no-padding-hr">
-                        <label class="pull-right"><input type="checkbox"  ng-model="props.status"><span> Active</span></label>
+                        <label class="pull-right"><input type="checkbox"  ng-model="props.is_Active"><span> Active</span></label>
                     </div>
                 </div>
             </div>
