--- a/app/views/balancesheet.html
+++ b/app/views/balancesheet.html
@@ -22,10 +22,6 @@
                         <span class="sublist-text-value">{{ledgergroup.amt| INRCurrency}}</span>
                     </li>
                 </ul>
-                <li class="custom-content-border sub-listheightvalues actionsmenu" ng-if="rootgroup.rootgroup_id == 3 && rootgroup.diff < 0">
-                    <span class="sublist-text">Loss for the year &#58;</span>
-                    <span class="sublist-text-value">{{(-1 * rootgroup.diff) | INRCurrency}}</span>
-                </li>
                 <li class="custom-content-border listheightvalues" ng-if="rootgroup.rootgroup_id > 3">
                     <span class="text-name">{{rootgroup.name}} &#58;</span>
                     <span class="text-value">{{(rootgroup.sum_amt) | INRCurrency}}</span>
@@ -38,6 +34,10 @@
                 </ul>
                 <li class="custom-content-border sub-listheightvalues actionsmenu" ng-if="rootgroup.rootgroup_id > 3 && rootgroup.diff >= 0">
                     <span class="sublist-text">Profit for the year &#58;</span>
+                    <span class="sublist-text-value">{{(rootgroup.diff) | INRCurrency}}</span>
+                </li>
+                <li class="custom-content-border sub-listheightvalues actionsmenu" ng-if="rootgroup.rootgroup_id > 3 && rootgroup.diff < 0">
+                    <span class="sublist-text">Loss for the year &#58;</span>
                     <span class="sublist-text-value">{{(rootgroup.diff) | INRCurrency}}</span>
                 </li>
             </ul>
