Issue fixed in voucher edit and add.

--- a/app/views/vouchersettings.html
+++ b/app/views/vouchersettings.html
@@ -175,7 +175,7 @@
 
                         <div class="row col-md-offset-4 no-padding-hr col-md-8" ng-show="samplePrefix">
                             <div class="row no-margin-hr">
-                                <span style="color:#787878"><i>Ex: {{mainPrefix}}</i></span>
+                                <span style="color:#787878"><i>{{mainPrefix}}</i></span>
                             </div>
                         </div>
 
@@ -355,7 +355,7 @@
 
                         <div class="row col-md-offset-4 no-padding-hr col-md-8" ng-show="samplePrefix">
                             <div class="row no-margin-hr">
-                                <span style="color:#787878"><i>Ex: {{mainPrefix}}</i></span>
+                                <span style="color:#787878"><i>{{mainPrefix}}</i></span>
                             </div>
                         </div>
 
