fixing the iframe issue in voucherdetails screen and some bug fixes in vouchersettings screen

--- a/app/views/voucherdetails.html
+++ b/app/views/voucherdetails.html
@@ -67,7 +67,7 @@
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
             <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close" data-dismiss="modal" ng-click="cancelForm()">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button>
                 <h1 class="modal-title">Image Preview</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom">
@@ -88,7 +88,7 @@
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
             <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close" data-dismiss="modal" ng-click="cancelaudioForm()">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancelaudioForm()">&times;</button>
                 <h1 class="modal-title">Audio Play</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom text-center">
@@ -107,14 +107,14 @@
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
             <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close" data-dismiss="modal" ng-click="cancelForm()">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button>
                 <h1 class="modal-title">File Preview</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom text-center">
                 <iframe id="voucheriframe" width="500" height="450" src="{{downloadurl}}">
                 </iframe>
             </div>
-            <div class=" modal-footer " style="margin-top:10px; ">
+            <div class="modal-footer" style="margin-top:10px; ">
                 <div class="row no-margin-hr ">
                 </div>
             </div>
