--- a/app/views/balancesheet.html
+++ b/app/views/balancesheet.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="custom-content-border sub-listheightvalues actionsmenu" ng-if="rootgroup.rootgroup_id > 3 && rootgroup.diff < 0">
                     <span class="sublist-text">Loss for the year &#58;</span>
-                    <span class="sublist-text-value">{{(rootgroup.diff) | INRCurrency}}</span>
+                    <span class="sublist-text-value">{{(-1 * rootgroup.diff) | INRCurrency}}</span>
                 </li>
             </ul>
         </div>
