--- a/app/views/ledger.html
+++ b/app/views/ledger.html
@@ -12,7 +12,7 @@
                 </li>
                 <li class="custom-content-border listheightvalues" ng-if="showprofitorloss && rootgroupdiff < 0" ng-click="selectReport()">
                     <span class="text-name">Loss for the year &#58;</span>
-                    <span class="text-value">{{((rootgroupdiff) | INRCurrency)}}</span>
+                    <span class="text-value">{{((-1 * rootgroupdiff) | INRCurrency)}}</span>
                 </li>
                 <li class="listheightvalues custom-content-border" ng-if="showprofitorloss && rootgroupdiff >= 0" ng-click="selectReport()">s
                     <span class="text-name">Profit for the year &#58;</span>
