Voucher Settings History,Voucher Settings Search,Location Ledgers Operations

--- a/app/views/company.html
+++ b/app/views/company.html
@@ -18,7 +18,7 @@
                         </td>
                         <td class="accType vertical-center colors pointer-cur" ng-click="access(user)" title=" 'Locations' " filter="{locations: 'number'} " sortable="'locations'">
                             {{user.locations}}</td>
-                        <td class="accType vertical-center " title=" 'Package' " filter="{ package: 'text'} " sortable=" 'package' ">
+                        <td class="accType vertical-center " title=" 'Package' " filter="{ package_name: 'text'} " sortable=" 'package_name' ">
                             {{user.package_name}}</td>
                         <!-- <td class="accType " title=" 'E-mail' " filter="{ email: 'text'} " sortable=" 'email' ">
                             {{user.email}}</td>
